[package]
name = "hashserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["query", "ws", "http1"], default-features = false }
axum-extra = { version = "0.9.3", features = ["typed-header"], default-features = false }
clap = { version = "4.5.4", features = ["derive", "std"], default-features = false }
headers = "0.4.0"
serde = { version = "1.0.197", features = ["serde_derive"], default-features = false }
tokio = { version = "1.37.0", features = ["full"], default-features = false }
tower-http = { version = "0.5.2", features = ["trace"], default-features = false }
tracing = { default-features = false, version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"], default-features = false }
